@@ -552,7 +552,7 @@ public class BotForceRandomizer {
     private int sampleWeightClass(GammaDistribution gamma) {
         int weightClass = (int) Math.round(gamma.sample());
         // clamp to weight limits
-        return Math.max(EntityWeightClass.WEIGHT_LIGHT, Math.min(EntityWeightClass.WEIGHT_ASSAULT, weightClass));
+        return Math.clamp(weightClass, EntityWeightClass.WEIGHT_LIGHT, EntityWeightClass.WEIGHT_ASSAULT);
     }
 
     /**
